アイテム周りの整備 Binding未実装

--- a/PokemonManagerWPF/PokemonManagerWPF.csproj
+++ b/PokemonManagerWPF/PokemonManagerWPF.csproj
@@ -67,6 +67,7 @@
     <Compile Include="InputForm.xaml.cs">
       <DependentUpon>InputForm.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ItemManager.cs" />
     <Compile Include="ItemSelecter.xaml.cs">
       <DependentUpon>ItemSelecter.xaml</DependentUpon>
     </Compile>
